--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css" />
     <title>Tribute Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,27 +15,27 @@
         <h1 id="title">Hajiya Fatima Yunusa</h1>
         <p>A mother like no other</p>
         <div id="img-div">
-            <img src="./images/family.jpg" alt ="family picture" id="img" />
+            <img src="./images/family.jpg" class="img-fluid" alt ="family picture" id="img" />
             <p id="img-caption">Hajiya Fatima, second from right is seated with her children whom she trained so well.</p>
         </div>
-        <div id="tribute-info">
+        <div id="tribute-info" class="d-flex flex-column justify-content-center align-items-center">
             <h3>A brief history of Hajiya Fatima:</h3>
             <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Nulla vitae libero tristique, dignissim ligula in, elementum nisl.</li>
-                <li>Sed vitae turpis molestie, consectetur arcu sit amet, egestas sem.</li>
-                <li>Aliquam pulvinar enim at hendrerit blandit.</li>
-                <li>Nulla eget erat convallis, ornare mauris vitae, tempor dui.</li>
-                <li>Pellentesque id risus vel augue finibus blandit nec cursus neque.</li>
-                <li>Etiam ac turpis eget lorem iaculis feugiat.</li>
-                <li>Aliquam ullamcorper ligula non sapien tincidunt, ac porta enim porttitor.</li>
-                <li>Phasellus sodales erat a blandit euismod.</li>
-                <li>Integer consectetur est non lorem congue eleifend.</li>
-                <li>Fusce gravida libero eu orci luctus scelerisque.</li>
-                <li>Integer accumsan orci dignissim nunc pellentesque, non vulputate magna mollis.</li>
-                <li>Integer accumsan orci dignissim nunc pellentesque, non vulputate magna mollis.</li>
-                <li>Integer accumsan orci dignissim nunc pellentesque, non vulputate magna mollis.</li>
-                <p><q>    Pellentesque egestas euismod maximus. Nam tempor neque eros, ac elementum nulla vehicula vitae. Proin at venenatis ipsum. Nam posuere consectetur dolor, in mattis ligula cursus quis. Donec ornare nunc at bibendum placerat. Morbi porta, risus eu sollicitudin lacinia, nibh urna lacinia neque, sed imperdiet dui odio sed leo. Pellentesque a nibh augue.</q>
+                <li><span>2010</span> - Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                <li><span>2011</span> - Nulla vitae libero tristique, dignissim ligula in, elementum nisl.</li>
+                <li><span>2012</span> - Sed vitae turpis molestie, consectetur arcu sit amet, egestas sem.</li>
+                <li><span>2013</span> - Aliquam pulvinar enim at hendrerit blandit.</li>
+                <li><span>2014</span> - Nulla eget erat convallis, ornare mauris vitae, tempor dui.</li>
+                <li><span>2015</span> - Pellentesque id risus vel augue finibus blandit nec cursus neque.</li>
+                <li><span>2016</span> - Etiam ac turpis eget lorem iaculis feugiat.</li>
+                <li><span>2017</span> - Aliquam ullamcorper ligula non sapien tincidunt, ac porta enim porttitor.</li>
+                <li><span>2018</span> - Phasellus sodales erat a blandit euismod.</li>
+                <li><span>2019</span> - Integer consectetur est non lorem congue eleifend.</li>
+                <li><span>2020</span> - Fusce gravida libero eu orci luctus scelerisque.</li>
+                <li><span>2021</span> - Integer accumsan orci dignissim nunc pellentesque, non vulputate magna mollis.</li>
+                <li><span>2022</span> - Integer accumsan orci dignissim nunc pellentesque, non vulputate magna mollis.</li>
+                <li><span>2023</span> - Integer accumsan orci dignissim nunc pellentesque, non vulputate magna mollis.</li>
+                <p><q>Pellentesque egestas euismod maximus. Nam tempor neque eros, ac elementum nulla vehicula vitae. Proin at venenatis ipsum. Nam posuere consectetur dolor, in mattis ligula cursus quis. Donec ornare nunc at bibendum placerat. Morbi porta, risus eu sollicitudin lacinia, nibh urna lacinia neque, sed imperdiet dui odio sed leo. Pellentesque a nibh augue.</q>
                     - Yunusa Nuhu
                 </p>
             </ul>
